<resources>
    <string name="app_name">Movie Tracker</string>
    <string name="register_movie">Register Movie</string>
    <string name="display_movie">Display Movie</string>
    <string name="favorites">Favorites</string>
    <string name="edit_movies">Edit Movies</string>
    <string name="ratings">Ratings</string>
    <string name="search">Search</string>
    <string name="description">All your movies in one place!</string>
    <string name="logo">logo</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="director_name">Director Name</string>
    <string name="actors">Cast Members ( Separated by \' , \' )</string>
    <string name="review">Your Review</string>
    <string name="save">Save</string>
    <string name="rating">Rating</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="done">Done</string>
    <string name="yearTV">Year :</string>
    <string name="directorTV">Director :</string>
    <string name="castTv">Cast :</string>
    <string name="actors_actressesTv">Actors/Actresses</string>
    <string name="reviewTv">Review :</string>
    <string name="your_reviewTv">Your Review</string>
    <string name="ratingTv">Rating :</string>
    <string name="update">Update</string>
    <string name="lookup">Lookup</string>
    <string name="result">Result</string>
    <string name="find_movie">Find Movie</string>
    <string name="your_movies">Your Movies</string>
    <string name="loading">Loading</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="favorite">Favorite</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="rating_array">
        <item>Rating</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>