<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieInfo">

    <TextView
        android:id="@+id/tv_movieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center_horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_movieTitle">

        <TextView
            android:id="@+id/tv_yearPointer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/yearTV"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_yearInfo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/karla"
            android:hint="@string/year"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_director"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_year">

        <TextView
            android:id="@+id/tv_directorPointer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/directorTV"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_directorInfo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/karla"
            android:hint="@string/directorTV"
            android:importantForAutofill="no"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_actors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_director">

        <TextView
            android:id="@+id/tv_actorsPointer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/castTv"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_actorsInfo"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/actors_actressesTv"
            android:importantForAutofill="no"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_actors">

        <TextView
            android:id="@+id/tv_reviewPointer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/reviewTv"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_reviewInfo"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/your_reviewTv"
            android:importantForAutofill="no"
            android:inputType="textCapSentences" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_ratingPointer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/ratingTv"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_review" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:isIndicator="false"
        android:numStars="10"
        android:progressTint="@color/yellow"
        android:scaleX=".7"
        android:scaleY=".7"
        android:secondaryProgressTint="@color/yellow"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_ratingPointer"
        app:layout_constraintTop_toBottomOf="@+id/linear_review" />


    <TextView
        android:id="@+id/tv_favoritePointer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_weight="1"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/favorite"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ratingPointer" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:onClick="updateBtnClicked"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_favorite" />

    <RadioGroup
        android:id="@+id/rg_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_favoritePointer"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar">

        <RadioButton
            android:id="@+id/rb_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/karla"
            android:textSize="18sp"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/rb_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/karla"
            android:textSize="18sp"
            android:text="@string/no" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>